--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "./rsiot-timescaledb-storing",
     "./rsiot-websocket-server",
     "./rsiot-websocket-client",
+    "./rsiot-macros",
 ]
 resolver = "2"
 
@@ -64,6 +65,12 @@ tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18" }
 url = { version = "2.5.0" }
 
+# для макросов
+proc-macro2 = "1.0"
+proc-macro-error = "1.0"
+quote = "1.0"
+syn = "2.0"
+
 
 rsiot-component-core = { version = "0.0.12", path = "./rsiot-component-core" }
 rsiot-components-config = { version = "0.0.12", path = "./rsiot-components-config" }
@@ -71,6 +78,7 @@ rsiot-env-vars = { version = "0.0.12", path = "./rsiot-env-vars" }
 rsiot-extra-components = { version = "0.0.12", path = "./rsiot-extra-components" }
 rsiot-http-client = { version = "0.0.12", path = "./rsiot-http-client" }
 rsiot-http-server = { version = "0.0.12", path = "./rsiot-http-server" }
+rsiot-macros = { version = "0.0.0", path = "./rsiot-macros" }
 rsiot-messages-core = { version = "0.0.12", path = "./rsiot-messages-core" }
 rsiot-modbus-client = { version = "0.0.12", path = "./rsiot-modbus-client" }
 rsiot-redis-publisher = { version = "0.0.12", path = "./rsiot-redis-publisher" }
