--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -10,5 +10,9 @@ readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
+chrono = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+# test
+rsiot-macros = { workspace = true }
