--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,23 +12,21 @@ version = "0.0.83"
 
 
 [dependencies]
-anyhow = { version = "1.0.97" }
-bincode = { version = "1.3.3" }
+anyhow = { version = "1.0.99" }
 bitvec = { version = "1.0.1" }
 byteorder = { version = "1.5.0" }
 # TODO - возможно заменить на time
-chrono = { version = "0.4.40", features = ["serde"] }
-crc = { version = "3.2.1" }
+chrono = { version = "0.4.42", features = ["serde"] }
+crc = { version = "3.3.0" }
 document-features = { version = "0.2.11" }
-getrandom = { version = "0.2", features = ["js"] }
 # TODO - заменить на web-time
 instant = { version = "0.1.13", features = ["wasm-bindgen"] }
-serde = { version = "1.0.197", features = ["derive"] }
-strum = { version = "0.27.1", features = ["derive"] }
-thiserror = { version = "2.0.12" }
-time = { version = "0.3.41", features = ["formatting", "macros", "serde"] }
-tracing = { version = "0.1.40", features = ["log"] }
-uuid = { version = "1.7.0", features = [
+serde = { version = "1.0.219", features = ["derive"] }
+strum = { version = "0.27.2", features = ["derive"] }
+thiserror = { version = "2.0.16" }
+time = { version = "0.3.43", features = ["formatting", "macros", "serde"] }
+tracing = { version = "0.1.41", features = ["log"] }
+uuid = { version = "1.18.1", features = [
     "macro-diagnostics",
     "serde",
     "v4",
@@ -36,22 +34,23 @@ uuid = { version = "1.7.0", features = [
 ] }
 
 any_spawner = { version = "0.3.0", optional = true }
-async-trait = { version = "0.1.77", optional = true }
-axum = { version = "0.8.1", optional = true }
+async-trait = { version = "0.1.89", optional = true }
+axum = { version = "0.8.4", optional = true }
+bincode = { version = "2.0.1", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = " 0.1.7", optional = true }
 console-subscriber = { version = "0.4.1", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-graphics = { version = "0.8.1", optional = true }
-embedded-svc = { version = "0.28.0", optional = true } # TODO - HTTP request content_len()
+embedded-svc = { version = "0.28.1", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
-heapless = { version = "0.8.0", optional = true }
-http = { version = "1.0.0", optional = true }
+heapless = { version = "0.9.1", optional = true }
+http = { version = "1.3.1", optional = true }
 jwt = { version = "0.16.0", optional = true }
-futures = { version = "0.3.30", optional = true }
+futures = { version = "0.3.31", optional = true }
 hmac = { version = "0.12.1", optional = true }
-leptos = { version = "0.8.2", features = ["csr"], optional = true }
-leptos_router = { version = "0.8.2", optional = true }
+leptos = { version = "0.8.8", features = ["csr"], optional = true }
+leptos_router = { version = "0.8.6", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "async-tokio",
     "gpio_cdev",
@@ -59,20 +58,22 @@ linux-embedded-hal = { version = "0.4.0", optional = true, features = [
     "i2c",
     "spi",
 ], default-features = false }
-log = { version = "0.4.21", optional = true }
-postcard = { version = "1.1.1", features = [
+log = { version = "0.4.28", optional = true }
+postcard = { version = "1.1.3", features = [
     "use-std",
     "use-crc",
 ], optional = true }
-reactive_stores = { version = "0.2.2", optional = true }
-redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
-reqwest = { version = "0.12.14", features = ["json"], optional = true }
-rumqttc = { version = "0.24.0", optional = true }
-rppal = { version = "0.17.1", optional = true }
-palette = { version = "0.7.4", features = ["named"], optional = true }
-serde_json = { version = "1.0.113", optional = true }
-sha2 = { version = "0.10.8", optional = true }
-slint = { version = "1.4.1", optional = true }
+reactive_stores = { version = "0.2.5", optional = true }
+redis = { version = "1.0.0-alpha.1", features = [
+    "tokio-comp",
+], optional = true }
+reqwest = { version = "0.12.23", features = ["json"], optional = true }
+rumqttc = { version = "0.25.0", optional = true }
+rppal = { version = "0.22.1", optional = true }
+palette = { version = "0.7.6", features = ["named"], optional = true }
+serde_json = { version = "1.0.143", optional = true }
+sha2 = { version = "0.11.0-rc.2", optional = true }
+slint = { version = "1.13.1", optional = true }
 socketcan = { version = "3.5.0", features = ["tokio"], optional = true }
 sqlx = { version = "0.8.6", features = [
     "macros",
@@ -80,10 +81,10 @@ sqlx = { version = "0.8.6", features = [
     "runtime-tokio",
     "time",
 ], optional = true }
-ssd1306 = { version = "0.9.0", optional = true }
-surrealdb = { version = "2.2.1", optional = true }
-sysinfo = { version = "0.30.7", optional = true }
-teloxide = { version = "0.13.0", optional = true, features = ["macros"] }
+ssd1306 = { version = "0.10.0", optional = true }
+surrealdb = { version = "2.3.8", optional = true }
+sysinfo = { version = "0.37.0", optional = true }
+teloxide = { version = "0.17.0", optional = true, features = ["macros"] }
 tokio = { version = "^1.37.0", features = [
     "macros",
     "sync",
@@ -91,25 +92,25 @@ tokio = { version = "^1.37.0", features = [
     "time",
     "tracing",
 ], optional = true }
-tokio-metrics = { version = "0.4.3", optional = true }
-tokio-modbus = { version = "0.11.0", default-features = false, features = [
+tokio-metrics = { version = "0.4.5", optional = true }
+tokio-modbus = { version = "0.16.3", default-features = false, features = [
     "tcp",
 ], optional = true }
-tokio-tungstenite = { version = "0.21.0", optional = true }
-tokio-util = { version = "0.7.15", features = ["rt"], optional = true }
-toml = { version = "0.8.9", optional = true }
+tokio-tungstenite = { version = "0.27.0", optional = true }
+tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
+toml = { version = "0.9.5", optional = true }
 tracing-appender = { version = "0.2.3", optional = true }
-tracing-subscriber = { version = "0.3.18", features = [
+tracing-subscriber = { version = "0.3.20", features = [
     "env-filter",
     "chrono",
 ], optional = true }
-tower-http = { version = "0.5.1", features = [
+tower-http = { version = "0.6.6", features = [
     "cors",
     "trace",
 ], optional = true }
-url = { version = "2.5.0", optional = true }
-wasm-bindgen = { version = "0.2.100", optional = true }
-web-sys = { version = "0.3.68", features = [
+url = { version = "2.5.7", optional = true }
+wasm-bindgen = { version = "0.2.101", optional = true }
+web-sys = { version = "0.3.78", features = [
     "History",
     "Location",
     "Node",
@@ -157,13 +158,13 @@ tokio = { version = "^1.36.0", features = [
 
 
 [dev-dependencies]
-serde_json = { version = "1.0.114" }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
+serde_json = { version = "1.0.143" }
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
 itertools = "*"
 
 [build-dependencies]
-embuild = { version = "0.31.3", features = ["espidf"] }
-cfg_aliases = "0.2.0"
+embuild = { version = "0.33.1", features = ["espidf"] }
+cfg_aliases = "0.2.1"
 
 [features]
 
