--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,10 @@ embedded-graphics = { version = "0.8.1", optional = true }
 embedded-svc = { version = "0.28.1", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
 heapless = { version = "0.9.1", optional = true }
+hmac = { version = "0.12.1", optional = true }
 http = { version = "1.3.1", optional = true }
 jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.31", optional = true }
-hmac = { version = "0.12.1", optional = true }
 leptos = { version = "0.8.8", features = ["csr"], optional = true }
 leptos_router = { version = "0.8.6", optional = true }
 linux-embedded-hal = { version = "0.4.0", optional = true, features = [
@@ -74,7 +74,7 @@ rumqttc = { version = "0.25.0", optional = true }
 rppal = { version = "0.22.1", optional = true }
 palette = { version = "0.7.6", features = ["named"], optional = true }
 serde_json = { version = "1.0.145", optional = true }
-sha2 = { version = "0.11.0-rc.2", optional = true }
+sha2 = { version = "0.10.9", optional = true }
 slint = { version = "1.13.1", optional = true }
 socketcan = { version = "3.5.0", features = ["tokio"], optional = true }
 sqlx = { version = "0.8.6", features = [
