--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -63,9 +63,8 @@
             // "cmp_linux_uart_master",
             // "cmp_math"
             // "cmp_modbus_client"
-            "cmp_mqtt_client"
+            // "cmp_mqtt_client"
             // "cmp_plc",
-            // "cmp_redis_client",
             // "cmp_os_process",
             // "cmp_slint"
             // "cmp_surrealdb",
