--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,9 +66,6 @@ postcard = { version = "1.1.3", features = [
 ], optional = true }
 quick-xml = { version = "0.38.3", optional = true }
 reactive_stores = { version = "0.2.5", optional = true }
-redis = { version = "1.0.0-alpha.1", features = [
-    "tokio-comp",
-], optional = true }
 reqwest = { version = "0.12.23", features = ["json"], optional = true }
 rumqttc = { version = "0.25.0", optional = true }
 rppal = { version = "0.22.1", optional = true }
@@ -291,9 +288,6 @@ cmp_plc = ["executor"]
 ## Работа с периферией Raspberry Pi
 cmp_raspberrypi = ["executor", "dep:bincode", "serde_postcard", "dep:rppal"]
 
-## Компонент клиента Redis
-cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
-
 ## Компонент пользовательского интерфейса, реализованного с помощью библиотеки Slint
 cmp_slint = ["executor", "dep:slint"]
 
@@ -331,6 +325,9 @@ cmp_webstorage = ["executor"]
 
 ## Компиляция документации
 rustdoc = []
+
+## Устаревшие компоненты
+deprecated = []
 
 
 [package.metadata.docs.rs]
@@ -463,14 +460,6 @@ path = "examples/cmp_plc/config_plc_template.rs"
 [[example]]
 name = "cmp_redis_client_publication"
 path = "examples/cmp_redis_client/publication.rs"
-
-[[example]]
-name = "cmp_redis_client_subscription"
-path = "examples/cmp_redis_client/subscription.rs"
-
-[[example]]
-name = "cmp_system_info"
-path = "examples/cmp_system_info/cmp_system_info.rs"
 
 [[example]]
 name = "cmp_surrealdb"
